# job-applier

./: .gitignore  README.md  pyproject.toml
.pki/nssdb/: cert9.db  key4.db  pkcs11.txt
applyai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/: __init__.py  app.py  config.py  dto.py  gemini_client.py  ingestion.py  messaging.py  parsers.py  pipeline.py  rewrite.py  scoring.py  storage.py  text_utils.py
frontend/: __init__.py  app.py
shared/: __init__.py  models.py
tests/: test_pipeline.py
